--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,12 @@ backcall==0.2.0
 bleach==3.3.0
 cffi==1.14.4
 click==7.1.2
-colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 Flask==1.1.2
-gunicorn==20.0.4
+Flask-Cors==3.0.10
 ipykernel==5.4.3
 ipython==7.20.0
 ipython-genutils==0.2.0
@@ -20,6 +19,7 @@ ipywidgets==7.6.3
 itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.11
@@ -56,15 +56,18 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
-pywinpty==0.5.7
 pyzmq==22.0.2
 qtconsole==5.0.2
 QtPy==1.9.0
+scikit-learn==0.24.1
+scipy==1.6.1
 Send2Trash==1.5.0
 six==1.15.0
+sklearn==0.0
 SQLAlchemy==1.3.23
 terminado==0.9.2
 testpath==0.4.4
+threadpoolctl==2.1.0
 tornado==6.1
 traitlets==5.0.5
 wcwidth==0.2.5
